- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.4.1
 
- 
        c4f0d07bda (qt/qtdeclarative/dev) c4f0d07bda (qt/tqtc-qtdeclarative/dev), 4501cda65 (6.4)
 
QQmlGadgetPtrWrapper is a QObject but has a metaObject that claims it's not. Furthermore, all QQmlGadgetPtrWrapper instances are parented to the engine where they are detectable from the outside.
- resulted from
 - 
                    
QTBUG-108646 Segmentation fault when inspecting QML objects without breaking
-         
 - Closed
 
 -